--- a/view/begin.html
+++ b/view/begin.html
@@ -2,7 +2,7 @@
     <!--&lt;!&ndash;<input class="haha-{{hasResult}}" type="button" value="get next item" ng-click="showNextItem()">&ndash;&gt;-->
     <!--<div class="next buttonHover show_{{hasResult}}" ng-click="showNextItem()">Start</div>-->
 <!--</div>-->
-<div class="container">
+<div class="">
     <!-- Main component for a primary marketing message or call to action -->
     <div class="">
         <h1>VIA24测试</h1>
