--- a/view/begin.html
+++ b/view/begin.html
@@ -8,7 +8,7 @@
         <h1>VIA24测试</h1>
         <br>
         <p>
-            <div class="btn btn-lg btn-primary" style="width: 100%" ng-click="showNextItem()" role="button">开始 »</div>
+            <div class="btn btn-block" ng-click="showNextItem()" role="button">开始 »</div>
         </p>
     </div>
 
