--- a/view/begin.html
+++ b/view/begin.html
@@ -5,7 +5,8 @@
 <div class="">
     <!-- Main component for a primary marketing message or call to action -->
     <div class="">
-        <h1>VIA24测试</h1>
+        <h1>想一想在过去的一个月，你在真实情境下是如何表现的。问题中涉及的性格是绝大多人
+            都期望拥有的，但是请你按照真实的情况来回答。</h1>
         <br>
         <p>
             <div class="btn btn-block" ng-click="showNextItem()" role="button">开始 »</div>
