--- a/css/lediaocha.css
+++ b/css/lediaocha.css
@@ -15,6 +15,7 @@ input:focus,textarea:focus {border-color:#F39C12;outline:0;}
 a,button,label,textarea,div,select,option,ul,li{-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
 .btn{background:#F39C12;padding:10px;border:0 none;color:#fff;display:inline-block;text-align:center;border-radius:4px;}
 a.btn{color:#fff;display:inline-block;text-align:center;}
+.btn :active{background : #B6B1A9}
 
 select {width:100%;height:40px;}
 .input-block {width: 100%;}
