--- a/view/single.html
+++ b/view/single.html
@@ -15,7 +15,7 @@
         <div class="answers">
             <ul>
                 <li style="margin-bottom: 20px" ng-repeat="(aOptionId, aOption) in curItem.content.options">
-                    <div class="btn btn-block" ng-class="{option_selected:hasSelected()}" ng-click="selectOption(aOptionId)" role="button">
+                    <div class=" btn-block" ng-class="{true:'option_selected', false:'btn'}[hasSelected(aOptionId)]" ng-click="selectOption(aOptionId)" role="button">
                             {{aOption}}
                     </div>
                 </li>
