--- a/css/lediaocha.css
+++ b/css/lediaocha.css
@@ -22,8 +22,7 @@ a.btn{color:#fff;display:inline-block;text-align:center;}
 .option_selected {
     background: #B6B1A9; padding:10px;border:0 none;color:#fff;display:inline-block;text-align:center;border-radius:4px;
 }
-ul{list-style-type:none; margin:0;width:100%; }
-ul li{ width:50px float:left;}
+
 
 select {width:100%;height:40px;}
 .input-block {width: 100%;}
@@ -122,3 +121,5 @@ footer {text-align:center;padding:10px 0;color:#666;}
 .icon-grid-view:before {
     content: "\e017";
 }
+ul{list-style-type:none; margin:0;width:100%; }
+ul li{ width:50px; float:left;}
