--- a/view/begin.html
+++ b/view/begin.html
@@ -4,7 +4,7 @@
 <!--</div>-->
 <div class="">
     <!-- Main component for a primary marketing message or call to action -->
-    <div style="margin:10px;font-size: 16px">
+    <div style="margin:10px;font-size: 16px;padding-top: 5px;">
         <p>&nbsp;&nbsp;&nbsp;&nbsp;幸福创客为您带来性格优势测试。</p>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;本测试由宾夕法尼亚大学丶积极心理学创始人马丁•塞里格曼开发制定，其中文版由剑桥
         大学心理学苏德中博士设计，目前全球超过 2 千万人使用。</p>
@@ -12,6 +12,7 @@
         <p>&nbsp;&nbsp;&nbsp;&nbsp;想一想在过去的一个月，你在真实情境下是如何表现的。问题中涉及的性格是绝大多人
         都期望拥有的，但是请你按照真实的情况来回答。题目共24道，约五分钟内完成。</p>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;性格优势是可习得与提升的，我们建议您每月来测试您性格优势的变化。</p>
+       <br>
         <p>
             <div class="btn btn-block" ng-click="showNextItem()" role="button">开始 »</div>
         </p>
