--- a/css/lediaocha.css
+++ b/css/lediaocha.css
@@ -13,7 +13,7 @@ button,input,select,textarea{margin:0;font-size:1.6rem;vertical-align:middle;bor
 input[type=text],textarea,select {border: 1px solid #d5d5d5;padding: 8px 10px;color:#333;}
 input:focus,textarea:focus {border-color:#F39C12;outline:0;}
 a,button,label,textarea,div,select,option,ul,li{-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
-.btn{/*background:#F39C12;*/padding:5px;border:0 none;color:#fff;display:inline-block;text-align:center;border-radius:4px;}
+.btn{background:#F39C12;padding:5px;border:0 none;color:#fff;display:inline-block;text-align:center;border-radius:4px;}
 a.btn{color:#fff;display:inline-block;text-align:center;}
 /*.btn:active{background : #B6B1A9}*/
 .btn:active {
