--- a/css/lediaocha.css
+++ b/css/lediaocha.css
@@ -14,6 +14,8 @@ input[type=text],textarea,select {border: 1px solid #d5d5d5;padding: 8px 10px;co
 input:focus,textarea:focus {border-color:#F39C12;outline:0;}
 a,button,label,textarea,div,select,option,ul,li{-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
 .btn{background:#F39C12;padding:5px;border:0 none;color:#fff;display:inline-block;text-align:center;border-radius:4px;}
+.tian-btn{background:#F39C12;padding:5px;border:0 none;color:#fff;display:inline-block;text-align:center;border-radius:4px;}
+
 a.btn{color:#fff;display:inline-block;text-align:center;}
 /*.btn:active{background : #B6B1A9}*/
 .btn:active {
