--- a/css/lediaocha.css
+++ b/css/lediaocha.css
@@ -13,8 +13,8 @@ button,input,select,textarea{margin:0;font-size:1.6rem;vertical-align:middle;bor
 input[type=text],textarea,select {border: 1px solid #d5d5d5;padding: 8px 10px;color:#333;}
 input:focus,textarea:focus {border-color:#F39C12;outline:0;}
 a,button,label,textarea,div,select,option,ul,li{-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
-.btn{background:#F39C12;padding:5px;border:0 none;color:#fff;display:inline-block;text-align:center;border-radius:4px;}
-.tian-btn{background:#F39C12;padding:5px;border:0 none;color:#fff;display:inline-block;text-align:center;border-radius:4px;}
+.btn{/*background:#F39C12;*/padding:5px;border:0 none;color:#fff;display:inline-block;text-align:center;border-radius:4px;}
+.tian-btn{background:#F39C12;padding:5px;border:none;color:#fff;display:inline-block;text-align:center;border-radius:4px;}
 
 a.btn{color:#fff;display:inline-block;text-align:center;}
 /*.btn:active{background : #B6B1A9}*/
@@ -124,4 +124,4 @@ footer {text-align:center;padding:10px 0;color:#666;}
     content: "\e017";
 }
 ul{list-style-type:none; margin:0;width:100%; }
-ul li{ width:50px; float:left; padding-left: 5px}
+ul li{ width:70px; float:left; padding-left: 5px}
