--- a/view/single.html
+++ b/view/single.html
@@ -22,7 +22,8 @@
             <div class="clear"></div>
         </div>
 
-        <div style="padding-top:50px">
+        <br><br>
+        <div>
             <button ng-click="showBeforeItem()">上一个</button>
             <button ng-show="!!getCurItem().result" ng-click="showNextItem()">下一个</button>
         </div>
