--- a/css/lediaocha.css
+++ b/css/lediaocha.css
@@ -125,3 +125,5 @@ footer {text-align:center;padding:10px 0;color:#666;}
 }
 ul{list-style-type:none; margin:0;width:100%; }
 ul li{ width:55px; float:left; padding-left: 2px}
+
+.tian_report{margin: 10px; padding: 10px}
