--- a/view/begin.html
+++ b/view/begin.html
@@ -19,3 +19,10 @@
     </div>
 
 </div>
+
+<script>
+    var p=document.getElementsByTagName('div');
+    for(var i=0;i<p.length;i++){
+        p[i].addEventListener('touchstart',function(){},false);
+    };
+</script>
