--- a/css/lediaocha.css
+++ b/css/lediaocha.css
@@ -17,10 +17,15 @@ a,button,label,textarea,div,select,option,ul,li{-webkit-tap-highlight-color: rgb
 .tian_btn{-webkit-appearance:none; background:#F39C12;padding:5px;border:none;color:#fff;display:inline-block;text-align:center;border-radius:4px;}
 
 a.btn{color:#fff;display:inline-block;text-align:center;}
+
 /*.btn:active{background : #B6B1A9}*/
 .btn:active {
     -webkit-appearance:none;  background: #B6B1A9;
 }
+div:active {
+    -webkit-appearance:none;  background: #B6B1A9;
+}
+
 .option_selected {
     background: #B6B1A9; /*padding:5px;*/border:0 none;color:#fff;display:inline-block;text-align:center;border-radius:4px;
 }
