--- a/view/single.html
+++ b/view/single.html
@@ -33,3 +33,11 @@
     </div>
 
 </div>
+
+<script>
+    //        var p=document.getElementsByTagName('div');
+    var p = document.getElementsByClassName('btn');
+    for(var i=0;i<p.length;i++){
+        p[i].addEventListener('touchstart',function(){},false);
+    };
+</script>
