--- a/view/begin.html
+++ b/view/begin.html
@@ -19,9 +19,9 @@
     </div>
 
 </div>
-
 <script>
-    var p=document.getElementsByTagName('div');
+    //        var p=document.getElementsByTagName('div');
+    var p = document.getElementsByClassName('btn');
     for(var i=0;i<p.length;i++){
         p[i].addEventListener('touchstart',function(){},false);
     };
