--- a/view/single.html
+++ b/view/single.html
@@ -31,13 +31,5 @@
 
 
     </div>
-
+    <img ng-hide="true"  ng-src="{{getNextTempItem()}}"/>
 </div>
-
-<script>
-    //        var p=document.getElementsByTagName('div');
-    var p = document.getElementsByClassName('btn');
-    for(var i=0;i<p.length;i++){
-        p[i].addEventListener('touchstart',function(){},false);
-    };
-</script>
