--- a/view/single.html
+++ b/view/single.html
@@ -12,7 +12,7 @@
         <div class="answers">
             <ul>
                 <li style="margin-bottom: 20px" ng-repeat="(aOptionId, aOption) in curItem.content.options">
-                    <div class=" btn-block" ng-class="{true:'option_selected', false:'btn'}[hasSelected(aOptionId)]" ng-click="selectOption(aOptionId)" role="button">
+                    <div class="tian_click btn-block" ng-class="{true:'option_selected', false:'btn'}[hasSelected(aOptionId)]" ng-click="selectOption(aOptionId)" role="button">
                             <!--{{aOption}}-->
                         <img ng-src="{{aOption}}"/>
 
