--- a/view/begin.html
+++ b/view/begin.html
@@ -14,7 +14,7 @@
         <p>&nbsp;&nbsp;&nbsp;&nbsp;性格优势是可习得与提升的，我们建议您每月来测试您性格优势的变化。</p>
        <br>
         <p>
-            <div class="tian_btn btn-block" ng-click="showNextItem()" role="button">现在开始</div>
+            <div class="tian_btn btn-block tian_click" ng-click="showNextItem()" role="button">现在开始</div>
         </p>
     </div>
 
