--- a/view/begin.html
+++ b/view/begin.html
@@ -2,21 +2,23 @@
     <!--&lt;!&ndash;<input class="haha-{{hasResult}}" type="button" value="get next item" ng-click="showNextItem()">&ndash;&gt;-->
     <!--<div class="next buttonHover show_{{hasResult}}" ng-click="showNextItem()">Start</div>-->
 <!--</div>-->
-<div class="">
+<div>
     <!-- Main component for a primary marketing message or call to action -->
-    <div style="margin:10px;font-size: 16px;padding-top: 5px;">
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;幸福创客为您带来性格优势测试。</p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;本测试由宾夕法尼亚大学丶积极心理学创始人马丁•塞里格曼开发制定，其中文版由剑桥
-        大学心理学苏德中博士设计，目前全球超过 2 千万人使用。</p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;测试包含 24 个维度，可以科学丶精准丶快捷地测试您的性格优势。您可以通过此问卷对自己的优势性格有所了解。</p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;想一想在过去的一个月，你在真实情境下是如何表现的。问题中涉及的性格是绝大多人
-        都期望拥有的，但是请你按照真实的情况来回答。题目共24道，约五分钟内完成。</p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;性格优势是可习得与提升的，我们建议您每月来测试您性格优势的变化。</p>
-       <br>
-        <p>
-            <div class="tian_btn btn-block tian_click" ng-click="showNextItem()" role="button">现在开始</div>
-        </p>
-    </div>
+    <!--<div style="margin:10px;font-size: 16px;padding-top: 5px;">-->
+        <!--<p>&nbsp;&nbsp;&nbsp;&nbsp;幸福创客为您带来性格优势测试。</p>-->
+        <!--<p>&nbsp;&nbsp;&nbsp;&nbsp;本测试由宾夕法尼亚大学丶积极心理学创始人马丁•塞里格曼开发制定，其中文版由剑桥-->
+        <!--大学心理学苏德中博士设计，目前全球超过 2 千万人使用。</p>-->
+        <!--<p>&nbsp;&nbsp;&nbsp;&nbsp;测试包含 24 个维度，可以科学丶精准丶快捷地测试您的性格优势。您可以通过此问卷对自己的优势性格有所了解。</p>-->
+        <!--<p>&nbsp;&nbsp;&nbsp;&nbsp;想一想在过去的一个月，你在真实情境下是如何表现的。问题中涉及的性格是绝大多人-->
+        <!--都期望拥有的，但是请你按照真实的情况来回答。题目共24道，约五分钟内完成。</p>-->
+        <!--<p>&nbsp;&nbsp;&nbsp;&nbsp;性格优势是可习得与提升的，我们建议您每月来测试您性格优势的变化。</p>-->
+       <!--<br>-->
+        <!--<p>-->
+            <!--<div class="tian_btn btn-block tian_click" ng-click="showNextItem()" role="button">现在开始</div>-->
+        <!--</p>-->
+    <!--</div>-->
 
+    <div style="width: 180px; height:50px; position: fixed; margin-top: 500px; margin-left: 70px;" ng-click="showNextItem()" role="button"></div>
+    <img id="x6d4bx8bd5x9898x5e93x7b80x4ecb" src="image/back.jpg" width="100%" height="100%" alt="" />
 
 </div>
