--- a/view/begin.html
+++ b/view/begin.html
@@ -18,7 +18,7 @@
         <!--</p>-->
     <!--</div>-->
 
-    <div style="background-color: #00FF00;opacity: 0.5;" ng-click="showNextItem()" role="button">
+    <div ng-click="showNextItem()" role="button">
         <img id="x6d4bx8bd5x9898x5e93x7b80x4ecb" src="image/back.jpg" width="100%" height="100%" alt="" />
     </div>
 </div>
