--- a/css/lediaocha.css
+++ b/css/lediaocha.css
@@ -7,7 +7,7 @@ li{list-style:none;}
 i,em,b {font-style:normal;}
 a,a:visited{text-decoration:none;color:#333;}
 label {display:block;}
-img {border: 0 none;height: auto;max-width: 100%;vertical-align: middle;}
+img {border: 0 none;/*height: auto;*/max-width: 100%;vertical-align: middle;}
 table {background-color: transparent;border-collapse: collapse;border-spacing: 0;max-width: 100%;}
 button,input,select,textarea{margin:0;font-size:1.6rem;vertical-align:middle;border-radius:2px;}
 input[type=text],textarea,select {border: 1px solid #d5d5d5;padding: 8px 10px;color:#333;}
