--- a/view/begin.html
+++ b/view/begin.html
@@ -20,5 +20,7 @@
 
     <div ng-click="showNextItem()" role="button">
         <img id="x6d4bx8bd5x9898x5e93x7b80x4ecb" src="image/back.jpg" width="100%" height="100%" alt="" />
+        <img src="image/back_tom.png" height="200px"/>
     </div>
+
 </div>
