--- a/view/report.html
+++ b/view/report.html
@@ -1,4 +1,4 @@
-<div ng-controller="ReportController" style="background: url('image/backgroud.jpg');background-repeat: repeat-y;height: 800px;">
+<div ng-controller="ReportController" style="background: url('image/backgroud.jpg'); background-size : 320px 1200px;background-repeat: repeat;height: 1200px;">
     <!--<ul>-->
         <!--<li style="margin-top: 10px" ng-repeat="oneItem in getAllSortedItems()">-->
             <!--<div>-->
@@ -34,6 +34,7 @@
 
             <!--{{getRandom()}}%的人更有{{getAllSortedItems()[index].describe.name}}<br>-->
         </div>
+        <img src="image/zhuanjia.png">
     </div>
-    <img src="image/zhuanjia.jpg">
+
 </div>
