--- a/mobile/css/my_style.css
+++ b/mobile/css/my_style.css
@@ -1,8 +1,9 @@
 body{
     margin: 0px;
-    background-color: #003399;
+    background-color: #22aadd;
 }
 
+/*导航 */
 .my_nav{
     height: 40px;
     background-color: #e9e9e9;
@@ -132,4 +133,21 @@ body{
 .footer_navbar ul li .copyright{
     text-align: center;
     font-size: small;
+}
+
+/* 愿景 */
+.my_page .circle{
+    width:50px; height:50px;
+    border-radius:25px;
+    float: left;
+}
+
+.my_page .expect_list{
+    margin-left: -40px;
+}
+
+.my_page .expect_list li{
+    display: block;
+    padding: 15px 0px 10px 0px;
+
 }
