--- a/mobile/css/styles.css
+++ b/mobile/css/styles.css
@@ -1,29 +1,29 @@
 
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-    outline: none;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
+/*html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {*/
+    /*margin: 0;*/
+    /*padding: 0;*/
+    /*border: 0;*/
+    /*font-size: 100%;*/
+    /*font: inherit;*/
+    /*vertical-align: baseline;*/
+    /*outline: none;*/
+    /*-webkit-font-smoothing: antialiased;*/
+    /*-webkit-text-size-adjust: 100%;*/
+    /*-ms-text-size-adjust: 100%;*/
+    /*-webkit-box-sizing: border-box;*/
+    /*-moz-box-sizing: border-box;*/
+    /*box-sizing: border-box;*/
+/*}*/
 html { overflow-y: scroll; }
-body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 62.5%;
-    line-height: 1;
-    padding-bottom: 40px;
-    color: #353535;
-    background: #d2d2d2 url('../image/bg.png');  /*http://subtlepatterns.com/squared-metal/*/
-}
+/*body {*/
+    /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
+    /*font-size: 62.5%;*/
+    /*line-height: 1;*/
+    /*padding-bottom: 40px;*/
+    /*color: #353535;*/
+    /*background: #d2d2d2 url('../image/bg.png');  *//*http://subtlepatterns.com/squared-metal*//*/*/
+/*}*/
 
 br { display: block; line-height: 1.6em; }
 
@@ -48,32 +48,32 @@ em, i { font-style: italic; }
 table { border-collapse: collapse; border-spacing: 0; }
 img { border: 0; max-width: 100%; }
 
-h1 {
-    font-family: 'Alegreya Sans', Tahoma, sans-serif;
-    font-size: 4.2em;
-    line-height: 1.3em;
-    font-weight: bold;
-    margin-bottom: 18px;
-    color: #585858;
-    text-align: center;
-    text-shadow: 1px 1px 0 rgba(255,255,255,0.75);
-}
-h2 {
-    font-family: 'Alegreya Sans', Tahoma, sans-serif;
-    font-size: 3.75em;
-    line-height: 1.2em;
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #585858;
-    text-align: center;
-    text-shadow: 1px 1px 0 rgba(255,255,255,0.75);
-}
+/*h1 {*/
+    /*font-family: 'Alegreya Sans', Tahoma, sans-serif;*/
+    /*font-size: 4.2em;*/
+    /*line-height: 1.3em;*/
+    /*font-weight: bold;*/
+    /*margin-bottom: 18px;*/
+    /*color: #585858;*/
+    /*text-align: center;*/
+    /*text-shadow: 1px 1px 0 rgba(255,255,255,0.75);*/
+/*}*/
+/*h2 {*/
+    /*font-family: 'Alegreya Sans', Tahoma, sans-serif;*/
+    /*font-size: 3.75em;*/
+    /*line-height: 1.2em;*/
+    /*font-weight: bold;*/
+    /*margin-bottom: 5px;*/
+    /*color: #585858;*/
+    /*text-align: center;*/
+    /*text-shadow: 1px 1px 0 rgba(255,255,255,0.75);*/
+/*}*/
 
-p {
-    font-size: 1.4em;
-    line-height: 1.2em;
-    color: #777;
-}
+/*p {*/
+    /*font-size: 1.4em;*/
+    /*line-height: 1.2em;*/
+    /*color: #777;*/
+/*}*/
 
 
 /** page structure **/
@@ -158,7 +158,7 @@ p {
     font-weight: 900;
     font-size: 3.0em;
     color: #fff;
-    border: 1px solid #fff;
+    /*border: 1px solid #fff;*/
     border-radius: 8px;
     -webkit-transition: all 0.2s linear;
     -moz-transition: all 0.2s linear;
