--- a/mobile/css/styles.css
+++ b/mobile/css/styles.css
@@ -94,7 +94,7 @@ img { border: 0; max-width: 100%; }
 .slider {
     position: relative;
     width: 100%;
-    height: 500px;
+    /*height: 500px;*/
     overflow: hidden;
 }
 
