--- a/mobile/css/my_style.css
+++ b/mobile/css/my_style.css
@@ -211,7 +211,7 @@ body{
     position: absolute;
     top: 0;
     left: 40px;
-    width: 100%;
+    width: 100px;
     min-height: 1.5em;
     min-height: 100%;
 
