--- a/mobile/css/my_style.css
+++ b/mobile/css/my_style.css
@@ -6,7 +6,7 @@
 
 body{
     margin: 0px;
-    background-color: #5F65C5;
+    background-color: #4A7FC1;
 
     font-family:myFirstFont;
 }
@@ -91,7 +91,7 @@ body{
 }
 .my_page .info_img{
     width: 100%; height: 100%;
-    margin-bottom: -5px;
+    margin-bottom: -10px;
 }
 
 .my_page .main-nav-list{
@@ -167,7 +167,7 @@ body{
     width: 100%;
     display: inline-block;
     text-align: left;
-    border-top: 1px solid #99C4E4;
+    /*border-top: 1px solid #99C4E4;*/
 
     color: white;
 }
@@ -221,10 +221,15 @@ body{
 .footer_navbar ul li .policy{
     text-align: center;
     padding-right: 16px;
+
+    font-size: 8px;
 }
 .footer_navbar ul li .copyright{
     text-align: center;
-    font-size: small;
+    font-size: 8px;
+}
+.footer_navbar ul li .policy a span{
+    display: inline-block;
 }
 
 /* 愿景 */
@@ -401,9 +406,10 @@ body{
 .my_page .expert{
     background-color: white;
     margin-top: -17px;
-
+    padding-right: 10px;
     padding-top: 20px;
-    margin-bottom: -15px;
+    margin-bottom: 0px;
+    padding-bottom: 10px;
 }
 .my_page .expert ul{
     margin-left: -35px ;
@@ -441,9 +447,11 @@ body{
 .my_page .chanpinfuwu_info{
     background-color: white;
     text-align: center;
-    margin-top: -20px;
-    padding-top: 20px;
-    padding-bottom: 10px;
+    margin-top: -10px;
+    margin-bottom: -2px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-size: 12px;
 }
 
 /*社会责任*/
