--- a/mobile/css/my_style.css
+++ b/mobile/css/my_style.css
@@ -92,7 +92,7 @@ body{
     padding: 0px;
 }
 .my_page .info_img{
-    width: 100%; height: 100%;
+    width: 100%; height: auto;
     margin-bottom: -10px;
 }
 
