--- a/mobile/css/my_style.css
+++ b/mobile/css/my_style.css
@@ -530,3 +530,21 @@ body{
     /*display: none;*/
     bottom: 10px !important;
 }
+
+select{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 1.5em;
+    min-height: 100%;
+    height: 3em;
+    max-height: 100%;
+    outline: 0;
+    border-radius: inherit;
+    cursor: pointer;
+    filter: Alpha(Opacity=1);
+    opacity: 0;
+    z-index: 2;
+    text-align: center;
+}
