--- a/mobile/css/my_style.css
+++ b/mobile/css/my_style.css
@@ -563,3 +563,10 @@ select{
     z-index: 2;
     text-align: center;
 }
+
+.triangle-right {
+    width: 0px; height: 0px;
+    border-top: 50px solid transparent;
+    border-left: 30px solid red;
+    border-bottom: 50px solid transparent;
+}
